<resources>
    <string name="app_name">ExampleExpos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hola soy un boton</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="btn">Botones</string>
    <string name="etiquetas">Etiquetas</string>
    <string name="ct">Cuadros de texto</string>
    <string name="ex">EJEMPLO</string>
    <string name="ej">Ejercicio</string>
    <string name="title_activity_ejemplo_botones">EjemploBotonesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="Option">Seleccione una opcion:</string>
    <string name="FirstRB">  Pasar a la siguiente ventana</string>
    <string name="SecondRB">  Mensaje 1</string>
    <string name="ThirstRB">  Mensaje 2</string>
    <string name="FirstSwitch">Mostrar informacion</string>
    <string name="btnReturn">Regresar</string>
    <string name="btnNext">Siguiente</string>


    <!--Etiquetas-->

    <string name="etiqueta_informacion">Entrada</string>
    <string name="caja_texto">escribir palabra</string>
    <string name="entrada">Aceptar</string>
    <string name="placeholder">Ingresar contraseña</string>
    <string name="user">Usuario</string>
    <string name="ok">ACEPTA R</string>
    <string name="info">INFORMACIÓN</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="pass">Contraseña</string>


    <!--cuadros de texto-->
    <string name="plain_text1">NOMBRE</string>
    <string name="plain_text2">CONTRASEÑA</string>
    <string name="plain_text3">EMAIL</string>
    <string name="plain_text4">TELEFONO</string>
    <string name="plain_text5">FECHA</string>


    <string name="saludo">BIENVENIDO</string>
    <string name="txt_user">Usuario</string>
    <string name="txt_emain">Correo</string>
    <string name="txt_valida">OK</string>
    <string name="txt_pass">Contraseña</string>
    <string name="txt_verPass">Verificar Contraseña</string>

</resources>
