<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_btn">

    <fragment
        android:id="@+id/nav_btn"
        android:name="lunainc.com.mx.exampleexpos.ui.botones.BotonesFragment"
        android:label="@string/btn"
        tools:layout="@layout/fragment_botonesxml">

    </fragment>




    <fragment
        android:id="@+id/nav_et"
        android:name="lunainc.com.mx.exampleexpos.ui.etiquetas.EtiquetasFragment"
        android:label="@string/etiquetas"
        tools:layout="@layout/fragment_etiquetas" />

    <fragment
        android:id="@+id/nav_ct"
        android:name="lunainc.com.mx.exampleexpos.ui.cuadrosdetexto.CuadroTextoFragment"
        android:label="@string/ct"
        tools:layout="@layout/fragment_cuadros_texto" />
</navigation>