<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <LinearLayout
        android:id="@+id/containerElements"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">




        <TextView
            android:layout_marginTop="55dp"
            android:layout_marginBottom="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saludo"
            android:textColor="@color/colorAzul"
            android:textSize="24sp"
            android:fontFamily="serif-monospace"
            />

        <EditText
            android:id="@+id/id_usr"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:background="@drawable/borde_circle"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_user"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/id_mail"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:background="@drawable/borde_circle"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_emain"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            />


        <EditText
            android:id="@+id/id_pass"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:background="@drawable/borde_circle"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_pass"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/id_pass2"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:background="@drawable/borde_circle"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_verPass"
            android:inputType="textPassword"
            android:layout_margin="10dp"
            />







    </LinearLayout>

    <Button
        android:id="@+id/id_ok"
        android:layout_margin="50dp"

        android:layout_alignParentBottom="true"
        android:layout_width="283dp"
        android:layout_height="55dp"
        android:text="@string/ok"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"


        />

</RelativeLayout>