<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackGround"
    >

    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>


    <LinearLayout
        android:layout_below="@id/toolbar"
        android:id="@+id/containerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_margin="30dp"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/Option"
            android:textColor="@color/Text"
            android:textSize="12pt" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/containerText"
        android:id="@+id/containerRadioButtons"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:layout_x="7dp"
        android:layout_y="203dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <RadioGroup
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="130dp">

            <RadioButton
                android:id="@+id/rbNextWindow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/FirstRB"
                android:textColor="@color/Text"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbMsg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SecondRB"
                android:textColor="@color/Text"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbMsg2"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:text="@string/ThirstRB"
                android:textColor="@color/Text"
                android:textSize="20sp" />
        </RadioGroup>


    </LinearLayout>

    <Button
        android:layout_below="@id/containerRadioButtons"
        android:id="@+id/btnNext"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="25dp"
        android:background="@drawable/borde_redondo"
        android:gravity="center"
        android:text="@string/btnNext"
        android:textColor="@color/TextButtons"
        android:textSize="12pt"
         />





</RelativeLayout>