<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".ui.etiquetas.ejercicio.SecondActivityEtiquetas">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <LinearLayout
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            style="@style/sans_serif_medium"
            android:layout_margin="30dp"
            android:id="@+id/txtInfo"
            android:text="@string/info"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            style="@style/sans_serif"
            android:layout_margin="30dp"
            android:id="@+id/txtUsername"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <TextView
            style="@style/sans_serif_medium"
            android:layout_margin="30dp"
            android:id="@+id/txtPass"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>



</RelativeLayout>